# shs-python

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  genindex.html  intro.html  intro.md  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
R-toetsen/: 01 One sample t-toets-Python.Rmd  02 Gepaarde t-toets-Python.Rmd  03 Ongepaarde t-toets-Python.Rmd  04 Repeated measures ANOVA-Python.Rmd  04-Repeated-measures-ANOVA-Python.Rmd  05 One-way ANOVA-Python.Rmd  06 Tekentoets I-Python.Rmd  07 Wilcoxon signed rank toets I-Python.Rmd  08 Mann-Whitney U toets I-Python.Rmd  08 Mann-Whitney U toets-Python.Rmd  09 Friedmans ANOVA I-Python.Rmd  10 Kruskal Wallis toets I-Python.Rmd  10 Kruskal Wallis toets-Python.Rmd  11 Chi-kwadraat toets voor goodness of fit en binomiaaltoets-Python.Rmd  12 McNemar toets-Python.Rmd  13 Chi-kwadraat toets en Fishers exact toets-Python.Rmd  13 Chi-kwadraat toets voor onafhankelijkheid en Fishers exact toets-Python.Rmd  13 Chi-kwadraat toets voor onafhankelijkheid en Fishers exacte toets-Python.Rmd  15 Cochrans Q toets-Python.Rmd  16 Chi-kwadraat toets voor onafhankelijkheid en Fisher-Freeman-Halton exact toets I-Python.Rmd  16 Chi-kwadraat toets voor onafhankelijkheid en Fisher-Freeman-Halton exacte toets I-Python.Rmd  18 Bhapkar toets-Python.Rmd  21 Chi-kwadraat toets voor goodness of fit en multinomiaaltoets-Python.Rmd  26 Tekentoets II-Python.Rmd  27 Moods mediaan toets-Python.Rmd
_sources/: markdown-notebooks.ipynb
data/: 02_Studielogboek.csv  (+42 more)
(+60 files in other folders)
