[tool.poetry]
name = "shs-python"
version = "0.1.0"
description = "Statistisch Handboek Studiedata in Python"
authors = ["Roland van Laar <roland@rolandvanlaar.nl>"]
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = "3.8,<3.12"
jupyter-book = "^0.13.1"
matplotlib = "^3.5.3"
numpy = "^1.23.2"
pandas = "^1.4.4"
scipy = "^1.9.1"
statsmodels = "^0.13.2"
seaborn = "^0.12.0"
pingouin = "^0.5.2"
scikit-posthocs = "^0.7.0"

[tool.poetry.dev-dependencies]
jupytext = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
